# stamped_velocity_smoother

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: params.cfg
include/stamped_velocity_smoother/: velocity_smoother_nodelet.hpp
launch/: standalone.launch  test_translational_smoothing.launch  velocity_smoother.launch
plugins/: nodelets.xml
src/: velocity_smoother_nodelet.cpp
test/: test_translational_input.py
