<package>
  <name>stamped_velocity_smoother</name>
  <version>0.0.1</version>
  <description>
     Bound incoming velocity messages according to robot velocity and acceleration limits.
     Based on 0.6.3 version of yocs_velocity_smoother from Yujin robot.
  </description>
  <author>Jorge Santos Simon</author>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="website"> </url>
  <url type="repository"> </url>
  <url type="bugtracker"> </url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml"/>
  </export>
</package>
